--- a/in-place-config/tmux.conf
+++ b/in-place-config/tmux.conf
@@ -1,57 +1,55 @@
 # default shell
 set-option -g default-shell /usr/local/bin/zsh
-set-option -g status-bg yellow
 
-# Synchronize
+# toggle Synchronize
 bind e set-window-option synchronize-panes on
-bind E set-window-option synchronize-panes off # end
+bind E set-window-option synchronize-panes off
 
 # set prefix C-q
-set -g prefix C-q
-
+# set -g prefix C-q
 # unbind prefix key
-unbind C-b
+# unbind C-b
 
 # decrease key stroke
-set -sg escape-time 1
+#set -sg escape-time 1
 # set history limit
-set-option -g history-limit 20000
+#set-option -g history-limit 20000
 
 # opne same directory
-bind c new-window -c '#{pane_current_path}'
-bind '"' split-window -c '#{pane_current_path}'
-bind % split-window -h -c '#{pane_current_path}'
+#bind c new-window -c '#{pane_current_path}'
+#bind '"' split-window -c '#{pane_current_path}'
+#bind % split-window -h -c '#{pane_current_path}'
 
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+#set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 # tmux screen copy
-bind-key -T copy-mode M-w send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+#bind-key -T copy-mode M-w send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 
 # アクティブなウィンドウを目立たせる
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+#setw -g window-status-current-fg white
+#setw -g window-status-current-bg red
+#setw -g window-status-current-attr bright
 
 # | でペインを縦に分割する
-bind | split-window -h
+#bind | split-window -h
 
 # - でペインを横に分割する
-bind - split-window -v
+#bind - split-window -v
 
 # ウィンドウのインデックスを1から始める
-set -g base-index 1
+#set -g base-index 1
 
 # ペインのインデックスを1から始める
-setw -g pane-base-index 1
+#setw -g pane-base-index 1
 
 # -----------------------------------------
 # Power-line
 # -----------------------------------------
-set-option -g status on
-set-option -g status-interval 1
+#set-option -g status on
+#set-option -g status-interval 1
 
-set -g status-right-length 100
-set -g status-right "#{battery_icon} #{battery_percentage} | Online: #{online_status} | #[fg=black][%Y-%m-%d(%a) %H:%M]"
+#set -g status-right-length 100
+#set -g status-right "#{battery_icon} #{battery_percentage} | Online: #{online_status} | #[fg=black][%Y-%m-%d(%a) %H:%M]"
 
 # -----------------------------------------
 # tmux plugins
