--- a/in-place-config/tmux.conf
+++ b/in-place-config/tmux.conf
@@ -1,5 +1,5 @@
 # default shell
-set-option -g default-shell /usr/local/bin/zsh
+#set-option -g default-shell /usr/local/bin/zsh
 
 # toggle Synchronize
 bind e set-window-option synchronize-panes on
